# jsquery

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  META.json  Makefile  README.md  jsonb_gin_ops.c  jsonb_ops.c  jsonb_vodka_ops.c  jsquery--1.0--1.1.sql  jsquery--1.0.1.sql  jsquery--1.0.sql  jsquery--1.1.sql  jsquery.control  jsquery.h  jsquery_constr.c  jsquery_extract.c  jsquery_gram.c  jsquery_gram.h  jsquery_gram.y  jsquery_io.c  jsquery_op.c  jsquery_scan.c  jsquery_scan.l  jsquery_selfuncs.c  jsquery_support.c  meson.build  monq.h  monq_create_query.c  monq_delete_query.c  monq_get_jsquery.c  monq_gram.y  monq_scan.l
.github/workflows/: build.yml
.travis/: install  test
data/: test_jsquery.data
doc/: intro.md  jsquery.ebnf  syntax.md
expected/: jsquery.out  jsquery_1.out  jsquery_2.out  jsquery_stats.out
include/utils/: jsonpath.h
sql/: jsquery.sql  jsquery_stats.sql
travis/: dep-ubuntu-llvm.sh  dep-ubuntu-postgres.sh  pg-travis-test.sh  run_tests.sh
